kubernetes/apps/tools/it-tools/config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingress
  namespace: tools
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
          namespace: tools
  tls:
    secretName: it-tools-tls
